# experiment-hub

./: .cursorrules  .env.example  .env.local.example  .gitignore  .npmrc  .replit  AGENT_ARCHITECTURE.md  CLAUDE.md  COMMIT_SUMMARY.md  PRD.md  PROTOTYPE_PORTS.md  README.md  SETUP_MCP_LOGGING.md  middleware.ts  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  replit.md  tailwind.config.ts  tsconfig.json  turbo.json  vercel.json  vitest.config.ts  vitest.live.config.ts
.claude/: launch.json  settings.json
.cursor/: FIGMA_MCP_SETUP.md  MCP_APPROACH_COMPARISON.md  QUICK_START.md  README.md  hooks.json  mcp-config.json.example
.github/: copilot-instructions.md  pull_request_template.md
agents/: AGENTS-VS-RULES-VS-SKILLS.md  README.md  commit-message.md  design-advisor.md  design-guidelines.md  experiment-creator.md  market-research.md  prd-writer.md  prototype-builder.md  (+1 more)
app/: page.tsx  (+4 more)
experiments/pbn-research/: .gitignore  README.md  pyproject.toml  requirements.txt  test_smoke.py
experiments/pbn-research/config/: scoring_weights.yaml  sweep_presets.yaml
experiments/pbn-research/docs/: ENV_PHILOSOPHY.md  HF_MODEL_SHORTLIST.md  PRD.md  business-case.md
experiments/pbn-research/notebooks/: pbn_eval.ipynb
experiments/pbn-research/prototype/: package-lock.json  package.json  server.js
experiments/pbn-research/prototype/public/: app.js  index.html  styles.css
experiments/pbn-research/src/pbn_eval/: __init__.py  api_cli.py  cli.py  compare.py  metrics.py  pipeline.py  preflight.py  runs.py  saliency.py  scoring.py  sweep.py
(+953 files in other folders)
