[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pbn-eval"
version = "0.1.0"
description = "Local PBN pipeline variants, metrics, and sweeps (research)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.11",
  "scikit-image>=0.22",
  "scikit-learn>=1.3",
  "pillow>=10.0",
  "matplotlib>=3.8",
  "pyyaml>=6.0",
  "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[tool.setuptools.packages.find]
where = ["src"]
